** {issue}642[#642]: Add `driver-type` to retrieve driver type keyword. ({person}dgr[@dgr])
** {issue}644[#644]: Deprecate `when-predicate` and `when-not-predicate` macros. See docstrings for guidance on alternatives. These will may be removed from the API at the next release that contains breaking changes. ({person}dgr[@dgr])

== v1.1.41 [minor breaking] - 2024-08-14 [[v1.1.41]]

* Minor breaking
** {issue}615[#615]: Etaoin now requires a minimum of JDK11 and Clojure 1.10
({lread})
** {issue}613[#612]: Remove all support for long obsolete and long untested PhantomJS
({lread})
** {issue}467[#467]: Move to W3C WebDriver spec.
({lread})
*** The impetus was Firefox no longer supporting legacy `:capabilities` syntax.
The breaking impact was on Chrome/Edge, when in "w3c mode" it will fail on WebDriver endpoints where there is a viable w3c alternative.
This means some custom Chrome specific fns should now be expressed as w3c WebDriver actions.
The following Chrome-specific fns have been deleted:
**** `mouse-btn-down`
**** `mouse-btn-up`
**** `with-mouse-btn`
**** `mouse-move-to` (was also available in Firefox)
**** `mouse-click`
**** `right-click`
**** `left-click`
**** `touch-down`
**** `touch-move`
**** `touch-up`
*** Remove internal support for undocumented `:desired-capabilities`.
The implementation was either ultra legacy or misunderstood legacy APIs.

* Other changes
** bump all deps to current versions
({lread})
** Add new fns that more lightly abstract W3C WebDriver Spec (as part of {issue}467[#467] API review sweep)
({lread})
*** `get-timeouts` - as alternative to `get-*-timeout`
*** `set-timeouts` - as alternative to `set-*-timeout`
*** `get-element-rect` - as alternative to `get-element-size`, `get-element-location`
*** `get-element-rect-el` - as alternative to `get-element-size-el`, `get-element-location-el`
*** `get-window-rect` - as alternative to `get-window-size`, `get-window-position`